RESOLVED FIXED200816
StorageManagerSet constructor should not be public
https://bugs.webkit.org/show_bug.cgi?id=200816
Summary StorageManagerSet constructor should not be public
Chris Dumez
Reported 2019-08-16 09:11:57 PDT
StorageManagerSet constructor should not be public since it subclasses ThreadSafeRefCounted and has a factory method.
Attachments
Patch (2.06 KB, patch)
2019-08-16 09:12 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2019-08-16 09:12:39 PDT
Geoffrey Garen
Comment 2 2019-08-16 10:26:10 PDT
Comment on attachment 376502 [details] Patch r=me
WebKit Commit Bot
Comment 3 2019-08-16 10:55:31 PDT
Comment on attachment 376502 [details] Patch Clearing flags on attachment: 376502 Committed r248778: <https://trac.webkit.org/changeset/248778>
WebKit Commit Bot
Comment 4 2019-08-16 10:55:33 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5 2019-08-16 15:06:15 PDT
Note You need to log in before you can comment on or make changes to this bug.