StorageManagerSet constructor should not be public https://bugs.webkit.org/show_bug.cgi?id=200816

Reviewed by Geoffrey Garen.

StorageManagerSet constructor should not be public since it subclasses ThreadSafeRefCounted and
has a factory method.

* NetworkProcess/WebStorage/StorageManagerSet.h:


Canonical link: https://commits.webkit.org/214553@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@248778 268f45cc-cd09-0410-ab3c-d52691b4dbfc